# llm_chatbot_playground

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
app/: main.py
app/agent/: service.py
app/api/: routes.py  schemas.py
app/core/: config.py  logging.py  request_id.py
app/eval/: README.md
app/search/: base.py  noop.py
tests/: test_api.py
week1/: lesson1_plan.md
