[project]
name = "llm-chatbot-playground"
version = "0.1.0"
description = "Minimal agent API scaffold for llm_chatbot_playground"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
